# node_editor

./: .gitignore  .gitmodules  .vimrc  .ycm_extra_conf.py  CMakeLists.txt  COPYING  README.md
include/: ConnectCommand.h  Connection.h  Console.h  Input.h  LiveReload.h  MoveCommand.h  Node.h  NodeImplementation.h  NodeItem.h  NodeItemModel.h  NodeModel.h  Output.h  Pin.h  Server.h  Workspace.h  namespace.h  pimpl.h
modules/: FindZMQ_PP.cmake  PrecompiledHeader.cmake
proto/: Graph.proto
src/: ConnectCommand.cpp  Connection.cpp  Console.cpp  LiveReload.cpp  MoveCommand.cpp  Node.cpp  NodeModel.cpp  Pin.cpp  Server.cpp  Workspace.cpp  WorkspaceGraph.cpp  WorkspacePrivate.h  main.cpp
ui/: ConnectionCanvas.qml  Console.qml  InputPin.qml  Node.qml  NodeHeader.qml  OutputPin.qml  Pin.qml  Workspace.qml  main.qml
